[Refactoring] Formmated erraneous tabs

--- a/Software/main/MDK-ARM/dds/dds.build_log.htm
+++ b/Software/main/MDK-ARM/dds/dds.build_log.htm
@@ -26,60 +26,13 @@ Project File Date:  04/10/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.14', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'dds'
-assembling startup_stm32f746xx.s...
-compiling fatfs_platform.c...
-compiling bsp_driver_sd.c...
-compiling sd_diskio.c...
-compiling fatfs.c...
-compiling audio.c...
-compiling main.c...
-compiling stm32f7xx_it.c...
-compiling stm32f7xx_hal_msp.c...
-compiling sdio.c...
+Build target 'dds'
 compiling gpio.c...
-compiling camera.c...
 compiling dsp.c...
 compiling led.c...
-compiling stm32f7xx_hal_gpio.c...
-compiling stm32f7xx_hal_flash.c...
-compiling stm32f7xx_hal_rcc.c...
-compiling stm32f7xx_hal_flash_ex.c...
-compiling stm32f7xx_hal_rcc_ex.c...
-compiling stm32f7xx_hal_dma.c...
-compiling stm32f7xx_hal_dma_ex.c...
-compiling stm32f7xx_hal_pwr.c...
-compiling stm32f7xx_hal_pwr_ex.c...
-compiling stm32f7xx_hal.c...
-compiling stm32f7xx_hal_cortex.c...
-compiling stm32f7xx_hal_i2c_ex.c...
-compiling stm32f7xx_hal_exti.c...
-compiling stm32f7xx_hal_dcmi_ex.c...
-compiling stm32f7xx_hal_dcmi.c...
-compiling stm32f7xx_hal_tim.c...
-compiling stm32f7xx_ll_sdmmc.c...
-compiling stm32f7xx_hal_i2s.c...
-compiling stm32f7xx_hal_tim_ex.c...
-compiling stm32f7xx_hal_i2c.c...
-compiling system_stm32f7xx.c...
-compiling stm32f7xx_hal_sd.c...
-compiling sccb.c...
-compiling diskio.c...
-compiling ov5640.c...
-compiling ff_gen_drv.c...
-compiling syscall.c...
-compiling ccsbcs.c...
-compiling BasicMathFunctions.c...
-compiling ControllerFunctions.c...
-compiling FastMathFunctions.c...
-compiling ComplexMathFunctions.c...
-compiling SupportFunctions.c...
-compiling StatisticsFunctions.c...
-compiling ff.c...
-compiling MatrixFunctions.c...
-compiling CommonTables.c...
-compiling TransformFunctions.c...
-compiling FilteringFunctions.c...
+compiling sdio.c...
+compiling camera.c...
+compiling main.c...
 linking...
 Program Size: Code=25298 RO-data=6802 RW-data=48 ZI-data=322312  
 FromELF: creating hex file...
@@ -106,7 +59,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
